@@ -260,6 +260,9 @@ sub feature_mods {
 	my ($self) = @_;
 	return if $self->type eq "require";
 
+	if ( my $cb_features = $self->_custom_feature_include_cb->($self) )    #
+	{ return $cb_features; }
+
 	if ( my $perl_version = $self->version ) {
 		## tried using feature.pm, but it is impossible to install future
 		## versions of it, so e.g. a 5.20 install cannot know about
@@ -272,6 +275,10 @@ sub feature_mods {
 
 	my %known     = ( signatures => 1, try => 1 );
 	my $on_or_off = $self->type eq "use";
+
+	if ( $on_or_off
+		and my $custom = $self->_custom_feature_includes->{ $self->module } )  #
+	{ return $custom; }
 
 	if ( $self->module eq "feature" ) {
 		my @features = grep $known{$_},
@@ -293,6 +300,20 @@ sub feature_mods {
 	}
 
 	return;
+}
+
+sub _custom_feature_includes {
+	my ($self) = @_;
+	return unless                                                             #
+	  my $document = $self->document;
+	return $document->custom_feature_includes || {};
+}
+
+sub _custom_feature_include_cb {
+	my ($self) = @_;
+	return unless                                                             #
+	  my $document = $self->document;
+	return $document->custom_feature_include_cb || sub { };
 }
 
 1;
